--- a/huu-ich/tich-luy-5.html
+++ b/huu-ich/tich-luy-5.html
@@ -165,8 +165,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -188,7 +188,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -249,7 +249,7 @@ https://www.lhboi.name.vn/huu-ich/tich-luy
 
   <h2>Làm sao tích luỹ được khi tôi thường tiêu hết thu nhập của mình?</h2>
   <p>Để tiết kiệm được, cần phải có <b>quyết tâm</b>, cần phải nghĩ đến <b>tương lai của chính mình</b>. Ngày nay mình có iPhone, iPad, AirBlade, TV LED 3D thật thích nhưng 35 năm sau mình có mười mấy tỉ đồng để sống không? Nếu không có hàng chục tỉ đồng thì mình có dám mua gói thuốc chuột uống không? Khi về hưu mỗi ngày mình đi tập thể dục, đánh cờ, chụp hình phong cảnh hay là mình đi bán vé số từ sáng đến tối?</p>
-  <p>Khi đã có quyết tâm tích luỹ cho tương lai chính mình rồi, hãy lập một <a href="ke-hoach-tai-chinh/">kế hoạch tài chính</a> khả thi. Để lập kế hoạch tài chính thì bạn phải biết <a href="chi-tieu.html">tiền của bạn đang đi đâu</a> hết. Bạn phải:</p>
+  <p>Khi đã có quyết tâm tích luỹ cho tương lai chính mình rồi, hãy lập một <a href="ke-hoach-tai-chinh/">kế hoạch tài chính</a> khả thi. Để lập kế hoạch tài chính thì bạn phải biết <a href="chi-tieu">tiền của bạn đang đi đâu</a> hết. Bạn phải:</p>
   <ol>
     <li>ghi chép mọi khoản thu-chi của mình,</li>
     <li>phân loại các khoản chi,</li>
@@ -287,7 +287,7 @@ data-ad-slot="3830899615">
 
   <p><b>Rất khó</b> để đạt được ngay lập tức tỉ lệ tiết kiệm như <a href="ke-hoach-tai-chinh/">bảng tính kế hoạch tài chính</a> tính cho bạn. Tuy nhiên bạn đừng nản lòng. Việc tập thói quen tiết kiệm cũng giống như cai thuốc lá hay là giảm cân, cần có thời gian để làm quen với nó. Hãy cố gắng bắt đầu với mức tiết kiệm 10% thu nhập, 3 tháng hoặc nửa năm sau tăng lên 15%, tăng từ từ đến khi đạt mức yêu cầu. Đừng bao giờ nản lòng.<br>
   Nếu bạn thấy khó giảm 10% chi tiêu hàng tháng, bạn hãy thử tưởng tượng lương bạn đột ngột bị giảm 10% hoặc lạm phát 10% mà lương chưa tăng (chuyện này rất dễ xảy ra trong thực tế). Khi đó bạn có tiếp tục sống không? Chắc chắn là vẫn sống, đâu có ai nhảy cầu tự tử vì bị mất 10% thu nhập. Vậy thì bạn hãy tự bớt chi tiêu của mình để khi về già không phải nghĩ đến chuyện nhảy cầu tự tử vì bị giảm đến 90% thu nhập.</p>
-  <p>Sau khi lập kế hoạch, bạn sẽ biết mỗi tháng mình tiết kiệm được bao nhiêu. Ngay khi có tiền vào túi, bạn hãy cách ly số tiền tiết kiệm bằng cách gửi vào những nơi sinh lợi an toàn như ngân hàng, <a href="dau-tu-co-phieu/quy-dau-tu.html">quỹ đầu tư</a> và đừng lấy nó ra dùng.</p>
+  <p>Sau khi lập kế hoạch, bạn sẽ biết mỗi tháng mình tiết kiệm được bao nhiêu. Ngay khi có tiền vào túi, bạn hãy cách ly số tiền tiết kiệm bằng cách gửi vào những nơi sinh lợi an toàn như ngân hàng, <a href="dau-tu-co-phieu/quy-dau-tu">quỹ đầu tư</a> và đừng lấy nó ra dùng.</p>
 <!-- AMP In-article 1 -->
 <amp-ad
 media="(max-width: 399px)"
@@ -318,27 +318,27 @@ data-ad-slot="3830899615">
   <h4>1. Tưởng lầm rằng sở hữu tài sản đắt tiền cũng là tích luỹ cho tương lai</h4>
   <p>Nhiều người nghĩ rằng dùng những thứ đắt tiền như smartphone, camera, TV LED 3D, xe hơi… đến khi cần tiền đem bán được, vậy cũng là tích luỹ cho tương lai. Họ quên rằng tích luỹ là phải làm cho đồng tiền tiết kiệm sinh lợi nhanh hơn mức trượt giá.</p>
   <h4>2. Cận thị</h4>
-  <p>Người bị cận thị chỉ nhìn rõ được trong khoảng cách gần, những thứ ở xa chỉ thấy mờ, thậm chí không thấy. Tích luỹ tiền theo kiểu cận thị thì chỉ thấy những cách sinh lợi ngắn hạn như gửi ngân hàng, hụi, không nghĩ đến những công cụ <a href="tich-luy-dai-han.html">đầu tư dài hạn</a>.</p>
+  <p>Người bị cận thị chỉ nhìn rõ được trong khoảng cách gần, những thứ ở xa chỉ thấy mờ, thậm chí không thấy. Tích luỹ tiền theo kiểu cận thị thì chỉ thấy những cách sinh lợi ngắn hạn như gửi ngân hàng, hụi, không nghĩ đến những công cụ <a href="tich-luy-dai-han">đầu tư dài hạn</a>.</p>
   <h4>3. Thiếu kiên nhẫn</h4>
   <p>Mỗi tháng dư được 2 triệu đồng, để suốt năm chưa được 30 triệu đồng, <i>vài trăm năm</i> nữa mới có được 20 tỉ. Thôi, không tiết kiệm nữa!<br>
   Không cần vài trăm năm đâu! <a href="ke-hoach-tai-chinh/">Bảng tính kế hoạch tài chính</a> cho thấy bạn sẽ có số tiền đó trước khi về hưu. Nếu bạn nghi ngờ kết quả tính toán thì hãy nhờ các thầy dạy Toán tính lại.</p>
   <h4>4. Thiếu kiểm soát</h4>
   <p>Bạn có tiết kiệm nhưng quên so sánh kết quả tích luỹ với kế hoạch đã đặt ra.<br>
-  Hãy thường xuyên dùng <a href="/kinh-nghiem/may-tinh/gnucash.html">phần mềm quản lý tài sản, thu chi</a> và cập nhật tình trạng tài sản của gia đình vào <a href="ke-hoach-tai-chinh/">bảng kế hoạch tài chính</a> để biết các kế hoạch có theo kịp tiến độ không.<br>
+  Hãy thường xuyên dùng <a href="/kinh-nghiem/may-tinh/gnucash">phần mềm quản lý tài sản, thu chi</a> và cập nhật tình trạng tài sản của gia đình vào <a href="ke-hoach-tai-chinh/">bảng kế hoạch tài chính</a> để biết các kế hoạch có theo kịp tiến độ không.<br>
   Bạn sẽ cần đến phần mềm quản lý tài sản khi bạn có hơn chục tài khoản tiết kiệm có kỳ hạn, vài tài khoản đầu tư, vài bất động sản.</p>
   <h4>5. Ăn mừng quá sớm</h4>
   <p>Bạn bắt đầu ăn mừng và lơi lỏng việc tiết kiệm khi tài sản tích luỹ được hơn vài chục tháng thu nhập.<br>
   Bạn cần xem lại kế hoạch tài chính trước khi cho phép mình giảm mức độ tiết kiệm.</p>
-  <div class="center">sang trang <a href="tich-luy-4.html">trước</a> - <a href="tich-luy.html">1</a> - <a href="tich-luy-2.html">2</a> - <a href="tich-luy-3.html">3</a> - <a href="tich-luy-4.html">4</a> - 5 - <a href="tich-luy-6.html">6</a> - <a href="tich-luy-6.html">kế</a>
+  <div class="center">sang trang <a href="tich-luy-4">trước</a> - <a href="tich-luy">1</a> - <a href="tich-luy-2">2</a> - <a href="tich-luy-3">3</a> - <a href="tich-luy-4">4</a> - 5 - <a href="tich-luy-6">6</a> - <a href="tich-luy-6">kế</a>
   </div>
   <div class="todiscuss">
     Các bài liên quan:
     <br>* <a href="ke-hoach-tai-chinh/">Lập kế hoạch ổn định tài chính suốt đời thật đơn giản</a>
-    <br>* <a href="chi-tieu.html">Chi tiêu có kế hoạch để tự do tài chính</a>
+    <br>* <a href="chi-tieu">Chi tiêu có kế hoạch để tự do tài chính</a>
     <br>* <a href="cac-loai-bao-hiem/">Bảo vệ tài sản trước những bất trắc</a>
-    <br>* <a href="dau-tu-co-phieu/quy-dau-tu.html">Tìm hiểu về quỹ đầu tư</a>
-    <br>* <a href="tich-luy-dai-han.html">So sánh các cách tích luỹ tài sản dài hạn</a>
-    <br>* <a href="/kinh-nghiem/may-tinh/gnucash.html">Phần mềm quản lý tài sản</a>
+    <br>* <a href="dau-tu-co-phieu/quy-dau-tu">Tìm hiểu về quỹ đầu tư</a>
+    <br>* <a href="tich-luy-dai-han">So sánh các cách tích luỹ tài sản dài hạn</a>
+    <br>* <a href="/kinh-nghiem/may-tinh/gnucash">Phần mềm quản lý tài sản</a>
     <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132931921963495424" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/375520425946905" rel="nofollow" target="_blank">Facebook</a>
   </div>
 <!-- AMP In-article 1 -->
