--- a/huu-ich/tich-luy-6.html
+++ b/huu-ich/tich-luy-6.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -190,7 +190,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -348,8 +348,8 @@ data-ad-slot="3830899615">
 
   <h4>Truyện vui</h4>
   <p>Người ta thường mất vài năm mới có tiền nhiều gấp đôi. Có một mẹo nhỏ để nhanh chóng có nhiều tiền GẤP ĐÔI, đó là: mỗi khi bạn rút tiền ra khỏi bóp để mua món gì đó thì hãy GẤP ĐÔI tờ tiền và cất trở vào bóp rồi đi về.
-  <br>Mẹo này không có tác dụng nếu bạn tiêu tiền từ <a href="/kinh-nghiem/may-tinh/vi-dien-tu.html">ví điện tử</a>.</p>
-  <div class="center">sang trang <a href="tich-luy-5.html">trước</a> - <a href="tich-luy.html">1</a> - <a href="tich-luy-2.html">2</a> - <a href="tich-luy-3.html">3</a> - <a href="tich-luy-4.html">4</a> - <a href="tich-luy-5.html">5</a> - 6
+  <br>Mẹo này không có tác dụng nếu bạn tiêu tiền từ <a href="/kinh-nghiem/may-tinh/vi-dien-tu">ví điện tử</a>.</p>
+  <div class="center">sang trang <a href="tich-luy-5">trước</a> - <a href="tich-luy">1</a> - <a href="tich-luy-2">2</a> - <a href="tich-luy-3">3</a> - <a href="tich-luy-4">4</a> - <a href="tich-luy-5">5</a> - 6
   </div>
   <div class="todiscuss">
     <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132931921963495424" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/375520425946905" rel="nofollow" target="_blank">Facebook</a>
