--- a/huu-ich/tich-luy-dai-han-2.html
+++ b/huu-ich/tich-luy-dai-han-2.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -190,7 +190,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -311,20 +311,20 @@ data-ad-slot="3830899615">
 
   <p>Làm sao chị A có thể hùn vốn vào các doanh nghiệp làm ăn tốt? Để hùn vốn vào các doanh nghiệp gia đình làm ăn tốt thì phải là người thân quen. Để hùn vốn vào Vinamilk, Vietcombank dễ hơn nhiều, chỉ cần mua cổ phiếu.<br>
   Chị A không biết gì về cổ phiếu, không có thời gian làm thủ tục mua cổ phiếu, lại còn phải mua nhiều loại cổ phiếu khác nhau nữa, rồi những lúc cổ phiếu xuống giá thì sao?<br>
-  Không sao cả. Không biết về cổ phiếu thì bỏ chút thời gian tìm hiểu những khái niệm và nguyên tắc chung, trẻ con các nước công nghiệp hoá còn chơi <a href="https://lhboi.name.vn/kinh-nghiem/may-tinh/cashflow.html">trò chơi đầu tư cổ phiếu</a> được mà không lẽ chị A không hiểu được. Điều quan trọng là tìm hiểu từ những người hiểu biết, đừng nghe những người không biết nói là <i>để tiền vào cổ phiếu chỉ có nước bán nhà, nhảy lầu tự tử</i>. Những người không biết rõ về cổ phiếu mà cũng tham gia thị trường chứng khoán thì rất dễ bán nhà, nhảy lầu. Những người đã từng bán nhà vì cổ phiếu vẫn chưa chắc là đã biết rõ về thị trường chứng khoán. Do đó đừng nghe những người từng bán nhà vì cổ phiếu, và tất nhiên là không thể nghe những người đã nhảy lầu vì cổ phiếu (vì có thể họ không nói được nữa).<br>
-  Chị A cũng không cần phải làm thủ tục mua cổ phiếu, đã có các tổ chức <a href="dau-tu-co-phieu/quy-dau-tu.html">quỹ đầu tư</a> làm giùm và họ luôn luôn chọn mua những cổ phiếu tốt nhất cho chị A. Hàng tháng, chị A chỉ cần lãnh lương ra và gọi ngay cho quỹ đầu tư bảo “Tháng này tôi có 1.200.000₫, hãy đầu tư vào những công ty tốt nhất cho tôi”, quỹ đầu tư cử người đến gặp chị A nhận tiền để đầu tư.<br>
+  Không sao cả. Không biết về cổ phiếu thì bỏ chút thời gian tìm hiểu những khái niệm và nguyên tắc chung, trẻ con các nước công nghiệp hoá còn chơi <a href="https://lhboi.name.vn/kinh-nghiem/may-tinh/cashflow">trò chơi đầu tư cổ phiếu</a> được mà không lẽ chị A không hiểu được. Điều quan trọng là tìm hiểu từ những người hiểu biết, đừng nghe những người không biết nói là <i>để tiền vào cổ phiếu chỉ có nước bán nhà, nhảy lầu tự tử</i>. Những người không biết rõ về cổ phiếu mà cũng tham gia thị trường chứng khoán thì rất dễ bán nhà, nhảy lầu. Những người đã từng bán nhà vì cổ phiếu vẫn chưa chắc là đã biết rõ về thị trường chứng khoán. Do đó đừng nghe những người từng bán nhà vì cổ phiếu, và tất nhiên là không thể nghe những người đã nhảy lầu vì cổ phiếu (vì có thể họ không nói được nữa).<br>
+  Chị A cũng không cần phải làm thủ tục mua cổ phiếu, đã có các tổ chức <a href="dau-tu-co-phieu/quy-dau-tu">quỹ đầu tư</a> làm giùm và họ luôn luôn chọn mua những cổ phiếu tốt nhất cho chị A. Hàng tháng, chị A chỉ cần lãnh lương ra và gọi ngay cho quỹ đầu tư bảo “Tháng này tôi có 1.200.000₫, hãy đầu tư vào những công ty tốt nhất cho tôi”, quỹ đầu tư cử người đến gặp chị A nhận tiền để đầu tư.<br>
   Khi giá cổ phiếu xuống thì sao? Giá cổ phiếu lên xuống là chuyện bình thường, cũng giống như giá vàng. Khi giá vàng xuống thì chị A không có gì phải lo khi biết rằng 30 năm nữa một lượng vàng vẫn đổi được 1.000 tô phở như hôm nay. Giá cổ phiếu xuống rồi sẽ lên lại và giá nó vẫn tăng dần theo thời gian.<br>
   Lỡ công ty đó thua lỗ, phá sản thì tiền mua cổ phiếu ra sao? Quỹ đầu tư với nhiều kinh nghiệm và xử lý thông tin chuyên nghiệp sẽ tránh bỏ tiền vào các công ty quản lý kém, và sẽ kịp thời rút tiền ra trước khi công ty thua lỗ, ngoài ra quỹ đầu tư để tiền vào hàng chục công ty thì một công ty tạm thời thua lỗ cũng không làm lỗ nguyên cả quỹ.<br>
-  Chú ý: quỹ đầu tư không phải là các kiểu đầu cơ vàng và ngoại tệ trên mạng hay rủ rê người ta gửi tiền với lãi suất 3%/tháng, xem thêm bài <a href="cach-dau-tu.html">Những cách đầu tư</a> để phân biệt.</p>
-  <p>Kết quả từ số liệu thực tế hơn 10 năm qua cho thấy <a href="dau-tu-co-phieu/so-tk-hay-dau-tu.html">lợi nhuận của quỹ đầu tư cao hơn ngân hàng</a>.</p>
-  <div class="center">sang trang <a href="tich-luy-dai-han.html">1</a> - 2 - <a href="tich-luy-dai-han-3.html">3</a></div>
+  Chú ý: quỹ đầu tư không phải là các kiểu đầu cơ vàng và ngoại tệ trên mạng hay rủ rê người ta gửi tiền với lãi suất 3%/tháng, xem thêm bài <a href="cach-dau-tu">Những cách đầu tư</a> để phân biệt.</p>
+  <p>Kết quả từ số liệu thực tế hơn 10 năm qua cho thấy <a href="dau-tu-co-phieu/so-tk-hay-dau-tu">lợi nhuận của quỹ đầu tư cao hơn ngân hàng</a>.</p>
+  <div class="center">sang trang <a href="tich-luy-dai-han">1</a> - 2 - <a href="tich-luy-dai-han-3">3</a></div>
 
   <div class="todiscuss">
     Các bài liên quan:
-    <br>* <a href="https://lhboi.name.vn/kinh-nghiem/may-tinh/cashflow.html">Trò chơi đầu tư làm giàu</a>
-    <br>* <a href="cach-dau-tu.html">Phân biệt những cách đầu tư và đầu cơ</a>
-    <br>* <a href="dau-tu-co-phieu/quy-dau-tu.html">Tìm hiểu về quỹ đầu tư</a>
-    <br>* <a href="dau-tu-co-phieu/so-tk-hay-dau-tu.html">Quỹ đầu tư cho lợi nhuận cao hơn gửi ngân hàng</a>
+    <br>* <a href="https://lhboi.name.vn/kinh-nghiem/may-tinh/cashflow">Trò chơi đầu tư làm giàu</a>
+    <br>* <a href="cach-dau-tu">Phân biệt những cách đầu tư và đầu cơ</a>
+    <br>* <a href="dau-tu-co-phieu/quy-dau-tu">Tìm hiểu về quỹ đầu tư</a>
+    <br>* <a href="dau-tu-co-phieu/so-tk-hay-dau-tu">Quỹ đầu tư cho lợi nhuận cao hơn gửi ngân hàng</a>
     <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132940074973188096" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376057329226548" rel="nofollow" target="_blank">Facebook</a>
   </div>
 
