--- a/huu-ich/tich-luy-dai-han-3.html
+++ b/huu-ich/tich-luy-dai-han-3.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -190,7 +190,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -325,15 +325,15 @@ data-ad-slot="3830899615">
   <p>Bàn về tính thanh khoản hay là khả năng chuyển đổi tài sản tích luỹ thành tiền đúng lúc và đúng số lượng cần thiết thì ta có thể xếp theo thứ tự từ cao đến thấp như sau:</p>
   <ol>
     <li>vàng, ngoại tệ</li>
-    <li><a href="dau-tu-co-phieu/quy-dau-tu.html">đơn vị quỹ mở</a></li>
+    <li><a href="dau-tu-co-phieu/quy-dau-tu">đơn vị quỹ mở</a></li>
     <li>cổ phiếu</li>
     <li>đất</li>
   </ol>
   <p>Tính thanh khoản sẽ ảnh hưởng đến tính chất dịch chuyển được của tài sản. Giả sử bạn muốn đi định cư ở nước ngoài, bạn muốn đem tài sản theo thì phải chuyển đổi nó thành ngoại tệ.</p>
   <p><b>Kết luận</b> đơn vị quỹ, cổ phiếu và đất là những công cụ tốt để tích luỹ tài sản lâu dài, vàng và ngoại tệ thích hợp cho những trường hợp khẩn cấp. Nên giữ một phần nhỏ (dưới 10%) tài sản bằng vàng hoặc ngoại tệ, và phần lớn tài sản bằng quỹ đầu tư, cổ phiếu, bất động sản.<br>
   Kết luận nào cũng có ngoại lệ, Việt Nam trong những năm 2010-2011 là một ngoại lệ khi tiền gửi tiết kiệm sinh lợi cao hơn những công cụ khác, do đó phải luôn luôn linh hoạt đánh giá các công cụ.</p>
-  <p>Tôi đã thử qua nhiều công cụ tich luỹ tài sản. Hiệu quả các kiểu tích luỹ của tôi trong hơn 15 năm qua được ghi lại trong <a href="hieu-qua-dau-tu.html">trang này</a>.</p>
-  <div class="center">sang trang <a href="tich-luy-dai-han.html">1</a> - <a href="tich-luy-dai-han-2.html">2</a> - 3</div>
+  <p>Tôi đã thử qua nhiều công cụ tich luỹ tài sản. Hiệu quả các kiểu tích luỹ của tôi trong hơn 15 năm qua được ghi lại trong <a href="hieu-qua-dau-tu">trang này</a>.</p>
+  <div class="center">sang trang <a href="tich-luy-dai-han">1</a> - <a href="tich-luy-dai-han-2">2</a> - 3</div>
 
   <div class="todiscuss">Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132940074973188096" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376057329226548" rel="nofollow" target="_blank">Facebook</a></div>
 <!-- AMP In-article 1 -->
