--- a/huu-ich/tich-luy-dai-han.html
+++ b/huu-ich/tich-luy-dai-han.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -190,7 +190,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -253,7 +253,7 @@ https://www.lhboi.name.vn/huu-ich/tich-luy-dai-han
 
   <p>Khi chọn một công cụ giữ tiền dài hạn ta phải cân nhắc những yếu tố: trượt giá, an toàn, thanh khoản.</p>
   <h2>Trượt giá</h2>
-  <p>Hầu như ai cũng lo ngại vấn đề trượt giá khi để dành tiền. Trượt giá là một điều khách quan ta phải chấp nhận. Dù muốn hay không ta cũng phải chấp nhận vật giá năm sau cao hơn năm trước không nhiều thì ít. Nếu hôm nay một tô phở giá 50.000 đồng, mười năm sau một tô phở có thể lên đến 100.000 đồng. Như vậy ta phải để dành thứ gì đó mà hôm nay đổi được mười tô phở thì 10-30 năm sau phải đổi được ít nhất mười tô phở. Tại sao phải để dành lâu như vậy thì được giải thích ở <a href="tich-luy.html">trang này</a>.</p>
+  <p>Hầu như ai cũng lo ngại vấn đề trượt giá khi để dành tiền. Trượt giá là một điều khách quan ta phải chấp nhận. Dù muốn hay không ta cũng phải chấp nhận vật giá năm sau cao hơn năm trước không nhiều thì ít. Nếu hôm nay một tô phở giá 50.000 đồng, mười năm sau một tô phở có thể lên đến 100.000 đồng. Như vậy ta phải để dành thứ gì đó mà hôm nay đổi được mười tô phở thì 10-30 năm sau phải đổi được ít nhất mười tô phở. Tại sao phải để dành lâu như vậy thì được giải thích ở <a href="tich-luy">trang này</a>.</p>
 <!-- AMP In-article 1 -->
 <amp-ad
 media="(max-width: 399px)"
@@ -311,13 +311,13 @@ data-ad-slot="3830899615">
 
   <p>Như vậy tích luỹ vàng không còn hợp trong xã hội hiện đại, khi mà phải cố gắng làm mọi thứ sinh lợi, những thứ bỏ đi mà còn sinh lợi được thì thứ quý như vàng không sinh lợi là rất phí phạm. Vài năm trước, chị A có thể gửi vàng vào ngân hàng để sinh lợi chừng 1%/năm, bây giờ không còn được như vậy nữa. Tích luỹ vàng để sau này dùng cũng giống như con sóc để dành hạt dẻ trong hốc cây, đàn kiến tích trữ thức ăn trong tổ, một hình thức tích luỹ rất sơ khai.</p>
   <p><i>Vậy tại sao có nhiều tổ chức tài chính vẫn giữ vàng?</i><br>
-  Các tổ chức tài chính đó giữ vàng để <i>đầu cơ</i> chứ họ không giữ vàng hàng chục năm như chị A. <a href="cach-dau-tu.html">Đầu cơ</a> nghĩa là họ sẽ bán vàng ra khi thị trường khan hiếm vàng và mua vàng vào khi có nhiều người bán. Làm như vậy họ sẽ làm cho vàng sinh lợi. Chị A muốn làm cho vàng sinh lợi cũng phải làm như vậy, nhưng không dễ làm được. Rất nhiều người đã cố đầu cơ vàng nhưng số người thành công không nhiều, đa số không những không lời mà còn lỗ nữa.</p>
-  <div class="center">sang trang 1 - <a href="tich-luy-dai-han-2.html">2</a> - <a href="tich-luy-dai-han-3.html">3</a></div>
+  Các tổ chức tài chính đó giữ vàng để <i>đầu cơ</i> chứ họ không giữ vàng hàng chục năm như chị A. <a href="cach-dau-tu">Đầu cơ</a> nghĩa là họ sẽ bán vàng ra khi thị trường khan hiếm vàng và mua vàng vào khi có nhiều người bán. Làm như vậy họ sẽ làm cho vàng sinh lợi. Chị A muốn làm cho vàng sinh lợi cũng phải làm như vậy, nhưng không dễ làm được. Rất nhiều người đã cố đầu cơ vàng nhưng số người thành công không nhiều, đa số không những không lời mà còn lỗ nữa.</p>
+  <div class="center">sang trang 1 - <a href="tich-luy-dai-han-2">2</a> - <a href="tich-luy-dai-han-3">3</a></div>
 
   <div class="todiscuss">
     Các bài liên quan:
-    <br>* <a href="tich-luy.html">Tích luỹ tiền để đủ sống trọn đời</a>
-    <br>* <a href="cach-dau-tu.html">Phân biệt những cách đầu tư và đầu cơ</a>
+    <br>* <a href="tich-luy">Tích luỹ tiền để đủ sống trọn đời</a>
+    <br>* <a href="cach-dau-tu">Phân biệt những cách đầu tư và đầu cơ</a>
     <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132940074973188096" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376057329226548" rel="nofollow" target="_blank">Facebook</a>
   </div>
 
