--- a/huu-ich/tich-luy.html
+++ b/huu-ich/tich-luy.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -190,7 +190,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -272,7 +272,7 @@ https://www.lhboi.name.vn/huu-ich/tich-luy
     <li>Tích luỹ dưới dạng gì?</li>
     <li>Làm sao tích luỹ được?</li>
   </ol>
-  <div class="center">sang trang 1 - <a href="tich-luy-2.html">2</a> - <a href="tich-luy-3.html">3</a> - <a href="tich-luy-4.html">4</a> - <a href="tich-luy-5.html">5</a> - <a href="tich-luy-6.html">6</a> - <a href="tich-luy-2.html">kế</a>
+  <div class="center">sang trang 1 - <a href="tich-luy-2">2</a> - <a href="tich-luy-3">3</a> - <a href="tich-luy-4">4</a> - <a href="tich-luy-5">5</a> - <a href="tich-luy-6">6</a> - <a href="tich-luy-2">kế</a>
   </div>
   <div class="todiscuss">
     Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132931921963495424" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/375520425946905" rel="nofollow" target="_blank">Facebook</a>
