--- a/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han.html
+++ b/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -190,7 +190,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -250,9 +250,9 @@ https://www.lhboi.name.vn/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han
   </div>
 
 <p>Trang này hướng dẫn cách ghi chép và tính hiệu quả các khoản tích luỹ lâu năm như <a href="/huu-ich/cac-loai-bao-hiem/">bảo hiểm nhân thọ</a>, 
-    <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu.html">quỹ đầu tư</a>, bất động sản… Chúng ta sẽ dùng các phần mềm spreadsheet  để ghi chép và 
-    dùng hàm <a href="/kinh-nghiem/may-tinh/ham-tai-chinh.html">XIRR</a> để tính hiệu quả. Tôi đã dùng cách này để 
-    <a href="../hieu-qua-dau-tu.html">so sánh các vụ đầu tư</a> của tôi.</p>
+    <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu">quỹ đầu tư</a>, bất động sản… Chúng ta sẽ dùng các phần mềm spreadsheet  để ghi chép và 
+    dùng hàm <a href="/kinh-nghiem/may-tinh/ham-tai-chinh">XIRR</a> để tính hiệu quả. Tôi đã dùng cách này để 
+    <a href="../hieu-qua-dau-tu">so sánh các vụ đầu tư</a> của tôi.</p>
 <p>Các bạn có thể xem và chép <a href="https://docs.google.com/spreadsheets/d/1ZwOJE5qAzLFzQoZZci4XJGP0YN0JktclOYgJIAp6As8/edit?usp=sharing" target='_blank'>file mẫu ĐTDH</a> 
     về tài khoản Google Drive của riêng bạn để dùng. Trong file mẫu ĐTDH này có ba ví dụ về ba cách tích luỹ: bảo hiểm nhân thọ, quỹ đầu tư, 
     bất động sản.</p>
@@ -295,7 +295,7 @@ data-ad-slot="3830899615">
 <h3>1. Cách ghi mỗi loại tích luỹ</h3>
 <p>Mọi giao dịch từ khi <i>bắt đầu tích luỹ</i> đều cần được ghi vào file này. Ghi đầy đủ và chính xác thì các báo cáo càng chính xác. 
     Nếu bạn đang có những khoản tích luỹ trước đây thì hãy cố gắng ghi lại từ ngày đầu, nếu không thể ghi đầy đủ các giao dịch đã qua thì đành chấp nhận báo cáo cho khoản đầu tư đó không chính xác tuyệt đối.
-<br>Bên cạnh file ĐTDH này, bạn còn có file ghi chép thu chi hàng ngày trong năm ví dụ <a href="/kinh-nghiem/may-tinh/gnucash.html">giadinh2015.gnucash</a>. 
+<br>Bên cạnh file ĐTDH này, bạn còn có file ghi chép thu chi hàng ngày trong năm ví dụ <a href="/kinh-nghiem/may-tinh/gnucash">giadinh2015.gnucash</a>. 
     Hai file này có liên hệ với nhau:</p>
 <ul><li>Mỗi khoản tiền đưa vào tích luỹ ghi trong file ĐTDH đều phải được ghi như một chi phí trong file giadinh20xx.gnucash</li>
 <li>Mỗi khoản tiền rút ra từ các khoản tích luỹ trong file ĐTDH đều được ghi như một thu nhập trong file giadinh20xx.gnucash</li></ul>
@@ -372,11 +372,11 @@ ghi ngày nộp tiền vào ô A, số tiền đã rút khỏi quỹ vào ô B, 
 
 <div class="todiscuss">
 Các bài liên quan:
-<br>* <a href="/kinh-nghiem/may-tinh/ham-tai-chinh.html">Các hàm tài chính</a>
-<br>* <a href="/kinh-nghiem/may-tinh/gnucash.html">Quản lý thu chi hàng ngày</a>
+<br>* <a href="/kinh-nghiem/may-tinh/ham-tai-chinh">Các hàm tài chính</a>
+<br>* <a href="/kinh-nghiem/may-tinh/gnucash">Quản lý thu chi hàng ngày</a>
 <br>* <a href="/huu-ich/cac-loai-bao-hiem/">Các loại bảo hiểm</a>
-<br>* <a href="/huu-ich/cac-loai-bao-hiem/bhnt-lien-ket-chung.html">BHNT liên kết chung là gì?</a>
-<br>* <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu.html">Quỹ đầu tư</a>
+<br>* <a href="/huu-ich/cac-loai-bao-hiem/bhnt-lien-ket-chung">BHNT liên kết chung là gì?</a>
+<br>* <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu">Quỹ đầu tư</a>
 <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132799550911987712" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/497985833700363" rel="nofollow" target="_blank">Facebook</a></div>
 
 <!-- AMP In-article 1 -->
