--- a/huu-ich/ke-hoach-tai-chinh/index.html
+++ b/huu-ich/ke-hoach-tai-chinh/index.html
@@ -168,8 +168,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -191,7 +191,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -261,7 +261,7 @@ https://www.lhboi.name.vn/huu-ich/ke-hoach-tai-chinh/
 <br>Một số ít người có khá hơn: có tháng dư tiền, có tháng hết tiền; số tiền dư đó không biết để làm gì nên thỉnh thoảng đổi điện thoại, đổi xe cho hết tiền. Sống như vậy tuy trước mắt không túng thiếu như trên nhưng sẽ gặp khó khăn khi về già sau 25-30 năm.
 <br>Rất ít người có kế hoạch để dành tiền ngắn hạn, ví dụ như năm nay phải để dành được 50 triệu, hoặc 5 năm nữa có 300 triệu để đặt tiền mua nhà trả góp…
 <br>Rất rất ít người có kế hoạch để dành tiền dài hạn như là để 1 tỉ đồng sau 15 năm cho con du học, để 10 tỉ đồng sau 30 năm để về già sống thảnh thơi. Người ta thường bối rối trước những kế hoạch dài hạn như vậy vì thời gian quá dài, lạm phát, lãi suất thay đổi…
-<br>Không có kế hoạch tài chính dài hạn thì người ta sẽ không biết bao giờ sẽ dùng số tiền đang có, và sẽ không dám đem số tiền đó <a href="../tich-luy-dai-han.html">đầu tư dài hạn để được lợi nhuận cao</a>.
+<br>Không có kế hoạch tài chính dài hạn thì người ta sẽ không biết bao giờ sẽ dùng số tiền đang có, và sẽ không dám đem số tiền đó <a href="../tich-luy-dai-han">đầu tư dài hạn để được lợi nhuận cao</a>.
 </p>
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -296,23 +296,23 @@ Trang web này giúp mọi người giải quyết những khó khăn đó, tín
 <ol>
   <li>Chủ động làm ra tiền để chi tiêu và tích luỹ, cần phải kiểm soát mức tăng tài sản để kịp có những món tiền lớn đúng lúc 
       và không ảnh hưởng đến những kế hoạch tiếp theo. <strong>Nếu bạn đang trong giai đoạn kiếm tiền thì hãy xem trang 
-      <a href="khtcp1.html">KHTCp1</a></strong>.</li>
+      <a href="khtcp1">KHTCp1</a></strong>.</li>
   <li>Chi tiêu từ khoản tiền đã tích luỹ ở giai đoạn trên, cần phải điều chỉnh mức chi tiêu để bảo đảm đủ tiền sống trọn đời. 
-      <strong>Nếu bạn đã bước vào giai đoạn hưởng thụ thì hãy xem trang <a href="khtcp2.html">KHTCp2</a></strong>.</li>
+      <strong>Nếu bạn đã bước vào giai đoạn hưởng thụ thì hãy xem trang <a href="khtcp2">KHTCp2</a></strong>.</li>
 </ol>
 
 <p>Bảng tính này chỉ dùng để lập kế hoạch; để theo dõi việc thực hiện kế hoạch hàng ngày bạn nên dùng phần mềm 
-    <a href="/kinh-nghiem/may-tinh/gnucash.html">gnucash</a> và file spreadsheet <a href="dau-tu-dai-han.html">ĐTDH</a>.</p>
+    <a href="/kinh-nghiem/may-tinh/gnucash">gnucash</a> và file spreadsheet <a href="dau-tu-dai-han">ĐTDH</a>.</p>
 <h3>Plan-Do-Check-Act</h3>
 <p>Các tính toán trong bảng tính này dựa trên các yếu tố sẽ thay đổi theo thời gian như là lãi suất, lạm phát, thu nhập và chi tiêu của gia đình bạn. Do đó bạn cần điều chỉnh kế hoạch của mình mỗi khi có thay đổi.
 <br>Hãy nhớ chép bảng tính ra một bản để lưu trước khi thay đổi, ví dụ: ngày 1.1.2020, chép file KHTC20190601 thành file KHTC20200101 và sửa file KHTC20200101.</p>
 
 <div class="todiscuss">
 Các bài liên quan:
-<br>* <a href="../cau-chuyen/mua-nha-hay-dau-tu.html">Nên mua nhà hay tích luỹ tài sản khác?</a>
-<br>* <a href="../tich-luy.html">Tích luỹ tiền để đủ sống trọn đời</a>
-<br>* <a href="../tich-luy-dai-han.html">So sánh các cách tích luỹ tài sản dài hạn</a>
-<br>* <a href="/kinh-nghiem/may-tinh/gnucash.html">Phần mềm quản lý tài sản</a>
+<br>* <a href="../cau-chuyen/mua-nha-hay-dau-tu">Nên mua nhà hay tích luỹ tài sản khác?</a>
+<br>* <a href="../tich-luy">Tích luỹ tiền để đủ sống trọn đời</a>
+<br>* <a href="../tich-luy-dai-han">So sánh các cách tích luỹ tài sản dài hạn</a>
+<br>* <a href="/kinh-nghiem/may-tinh/gnucash">Phần mềm quản lý tài sản</a>
 <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132799550911987712" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/1170841846414755" rel="nofollow" target="_blank">Facebook</a>
 </div>
 
