--- a/huu-ich/dau-tu-co-phieu/index.html
+++ b/huu-ich/dau-tu-co-phieu/index.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -190,7 +190,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -249,7 +249,7 @@ https://www.lhboi.name.vn/huu-ich/dau-tu-co-phieu/
     </amp-facebook-like>
   </div>
 
-<p>Trong bài <a href="../de-tien-vao-dau.html">Để tiền vào đâu</a>, tôi có viết rằng đầu tư vào cổ phiếu có thể mang lại lợi nhuận 
+<p>Trong bài <a href="../de-tien-vao-dau">Để tiền vào đâu</a>, tôi có viết rằng đầu tư vào cổ phiếu có thể mang lại lợi nhuận 
     cao hơn gửi tiết kiệm ở ngân hàng. Vậy ai và khi nào có thể đầu tư vào cổ phiếu?
 <br>
 Có hai trường hợp đầu tư vào cổ phiếu:</p>
@@ -258,7 +258,7 @@ Có hai trường hợp đầu tư vào cổ phiếu:</p>
 <li>đang có một số tiền lớn trong ngân hàng, muốn chuyển sang cổ phiếu để có lợi nhuận cao hơn trong dài hạn hoặc trung hạn</li>
 </ol>
 <p>(Mua cổ phiếu rồi bán lại sau một thời gian ngắn để kiếm lời không phải là đầu tư cổ phiếu mà là đầu cơ, 
-    <a href="../cach-dau-tu.html">đầu tư khác với đầu cơ</a>)
+    <a href="../cach-dau-tu">đầu tư khác với đầu cơ</a>)
 <br>Khi mua cổ phiếu, ai cũng muốn mua lúc giá thấp nhất. Nhưng làm sao biết được lúc nào giá thấp nhất, chẳng may mua 
     xong rồi mà giá lại giảm tiếp thì sao?
 <br>Có một phương pháp để giảm nguy cơ thua lỗ trong đầu tư cổ phiếu, gọi là phương pháp <i>bình quân giá cổ phiếu</i> 
@@ -268,7 +268,7 @@ Có hai trường hợp đầu tư vào cổ phiếu:</p>
     hiệu quả của cách đầu tư DCA với cách đưa hết tiền vào cổ phiếu một lượt (lump-sum). Dưới đây là bản dịch của bài đó.
 <br>Phương pháp bình quân giá cổ phiếu chỉ là một phần trong quyết định đầu tư cổ phiếu, một phần quan trọng và khó khăn khác 
     là chọn <b>cổ phiếu tốt</b>. Để tránh rủi ro khi chọn sai cổ phiếu thì những người không chuyên sẽ thuê những chuyên viên 
-    tài chính bằng cách đầu tư qua các <a href="quy-dau-tu.html">quỹ đầu tư</a>.</p>
+    tài chính bằng cách đầu tư qua các <a href="quy-dau-tu">quỹ đầu tư</a>.</p>
 <!-- AMP In-article 1 -->
 <amp-ad
 media="(max-width: 399px)"
@@ -453,9 +453,9 @@ data-ad-slot="3830899615">
 
 <div class="todiscuss">
 Các bài liên quan:
-<br>* <a href="../de-tien-vao-dau.html">Kết quả đầu tư cổ phiếu dài hạn</a>
-<br>* <a href="../cach-dau-tu.html">Phân biệt những cách đầu tư và đầu cơ</a>
-<br>* <a href="quy-dau-tu.html">Tìm hiểu về quỹ đầu tư</a>
+<br>* <a href="../de-tien-vao-dau">Kết quả đầu tư cổ phiếu dài hạn</a>
+<br>* <a href="../cach-dau-tu">Phân biệt những cách đầu tư và đầu cơ</a>
+<br>* <a href="quy-dau-tu">Tìm hiểu về quỹ đầu tư</a>
 <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132806720084893697" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/375958095903138" rel="nofollow" target="_blank">Facebook</a></div>
 <!-- AMP In-article 1 -->
 <amp-ad
